Fixed line wrapping issue

--- a/style.css
+++ b/style.css
@@ -165,6 +165,6 @@ body {
 }
 
 .element {
-	white-space:pre;
+	white-space:pre-wrap;
 	line-height: 140%;
 }
